# arbiter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_ZH_CN.md
.github/workflows/: release.yml  rust.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols.pkl  raw_document_symbols.pkl
.serena/memories/: done_checklist.md  project_overview.md  suggested_commands.md
docs/: architecture.md  architecture_zh_cn.md  deployment.md  deployment_zh_cn.md
packaging/aur/: PKGBUILD
rules/: 00-types.types  10-games.rules  20-browsers.rules  30-compilers.rules  40-desktop.rules
src/: app.rs  applier.rs  cli.rs  config.rs  daemon.rs  lib.rs  main.rs  matcher.rs  platform.rs  proc_events.rs  rules.rs  scx.rs
src/app/: mod.rs
src/applier/: cgroup.rs  io_weight.rs  process.rs
src/daemon/: actor.rs
src/platform/: linux.rs
src/platform/linux/: events.rs  mod.rs  scheduler.rs
src/rules/: loader.rs  matcher.rs  mod.rs  types.rs  validator.rs
