[package]
name = "arbiter"
version = "0.1.0"
edition = "2024"
description = "A non-intrusive process priority manager for Linux, designed as a companion to modern sched_ext (scx) schedulers. "
license = "MIT"

[[bin]]
name = "arbiter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
libc = "0.2.183"
procfs = "0.18.0"
glob = "0.3.3"
regex = "1.12.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
